--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           'opsz' 24
         }
         </style>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <span class="material-symbols-outlined">search</span>
