connected all js scripts between each other using chrome.runtime.sendMessage

--- a/popup.html
+++ b/popup.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto Form Filler</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>LinkedIn profile</h1>
 </body>
+<script src="popup.js"></script>
 </html>
