--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>LinkedIn profile</h1>
+    <form action="">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+    </form>
 </body>
 <script src="popup.js"></script>
 </html>
