--- a/connect.html
+++ b/connect.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-    <button><img src="assets/linkedin.svg" alt="">Connect LinkedIn</button>
+    <a href="popup.html" class="connect-button"><img src="assets/linkedin.svg" alt="">Connect LinkedIn</a>
 </body>
+<script src="connect.js"></script>
 </html>
