--- a/connect.html
+++ b/connect.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-    <a href="popup.html" class="connect-button"><img src="assets/linkedin.svg" alt="">Connect LinkedIn</a>
+    <button class="connect-button"><img src="assets/linkedin.svg" alt="">Connect LinkedIn</button>
 </body>
 <script src="connect.js"></script>
 </html>
