--- a/popup.html
+++ b/popup.html
@@ -7,26 +7,38 @@
     <!--<link rel="stylesheet" href="popup.css">-->
 </head>
 <body>
-    <h1>LinkedIn profile</h1>
-    <form method="post">
-        <label for="information">Personal Information</label><br>
-        <input type="text" id="fname" name="fname" placeholder="Name" required><br>
-        <input type="text" id="lname" name="lname" placeholder="Surname" required><br>
-        <input type="text" id="location" name="location" placeholder="Location" required><br>
-        <br>
-        <label for="education">Education</label><br>
-        <input type="text" id="school" name="school" placeholder="School" required><br>
-        <input type="text" id="degree" name="degree" placeholder="Degree" required><br>
-        <input type="text" id="study" name="study" placeholder="Field of Study" required><br>
-        <br>
-        <label for="education">Work Experience</label><br>
-        <input type="text" id="industry" name="industry" placeholder="Industry" required><br>
-        <br>
-        <label for="contacts">Contacts</label><br>
-        <input type="text" id="number" name="number" placeholder="Phone Number" required><br>
-        <input type="email" id="email" name="email" placeholder="E-mail" required><br>
-        <br>
-    </form>
+    <div class="cnt">
+        <div class="mini-profile">
+            <img src="assets/default.jpg" alt="" class="mini-profile__img">
+            <h1 class="mini-profile__user-name">Name Surname</h1>
+        </div>
+
+        <form method="post">
+            <div class="form-group">
+                <label for="information">Personal Information</label>
+                <input type="text" id="fname" name="fname" placeholder="Name" required>
+                <input type="text" id="lname" name="lname" placeholder="Surname" required>
+                <input type="text" id="location" name="location" placeholder="Location" required>    
+            </div>
+            
+            <div class="form-group">
+                <label for="education">Education</label>
+                <input type="text" id="school" name="school" placeholder="School" required>
+                <input type="text" id="degree" name="degree" placeholder="Degree" required>
+                <input type="text" id="study" name="study" placeholder="Field of Study" required>    
+            </div>
+
+            <div class="form-group">
+                <label for="education">Work Experience</label>
+                <input type="text" id="industry" name="industry" placeholder="Industry" required>    
+            </div>
+            <div class="form-group">
+                <label for="contacts">Contacts</label>
+                <input type="text" id="number" name="number" placeholder="Phone Number" required>
+                <input type="email" id="email" name="email" placeholder="E-mail" required>    
+            </div>
+        </form>
+    </div>
 </body>
 <script src="popup.js"></script>
 </html>
