--- a/popup.html
+++ b/popup.html
@@ -8,35 +8,43 @@
 </head>
 <body>
     <div class="cnt">
-        <div class="mini-profile">
+        <!-- <div class="mini-profile">
             <img src="assets/default.jpg" alt="" class="mini-profile__img">
-            <h1 class="mini-profile__user-name">Name Surname</h1>
-        </div>
+            <h1 id="fname" class="mini-profile__user-name">Name Surname</h1>
+        </div> -->
+
+        <div class="form-group">
+            <label for="userDropdown">Select a User</label>
+            <select id="userDropdown">
+                <option value="">-- Select a Profile --</option>
+            </select>
+        </div>        
 
         <form method="post">
             <div class="form-group">
                 <label for="information">Personal Information</label>
                 <input type="text" id="fname" name="fname" placeholder="Name" required>
                 <input type="text" id="lname" name="lname" placeholder="Surname" required>
-                <input type="text" id="location" name="location" placeholder="Location" required>    
+                <input type="text" id="location" name="location" placeholder="Location">    
             </div>
             
             <div class="form-group">
                 <label for="education">Education</label>
-                <input type="text" id="school" name="school" placeholder="School" required>
-                <input type="text" id="degree" name="degree" placeholder="Degree" required>
-                <input type="text" id="study" name="study" placeholder="Field of Study" required>    
+                <input type="text" id="school" name="school" placeholder="School">
+                <input type="text" id="degree" name="degree" placeholder="Degree">
+                <input type="text" id="study" name="study" placeholder="Field of Study">    
             </div>
 
             <div class="form-group">
                 <label for="education">Work Experience</label>
-                <input type="text" id="industry" name="industry" placeholder="Industry" required>    
+                <input type="text" id="industry" name="industry" placeholder="Industry">    
             </div>
             <div class="form-group">
                 <label for="contacts">Contacts</label>
-                <input type="text" id="number" name="number" placeholder="Phone Number" required>
-                <input type="email" id="email" name="email" placeholder="E-mail" required>    
+                <input type="text" id="number" name="number" placeholder="Phone Number">
+                <input type="email" id="email" name="email" placeholder="E-mail">    
             </div>
+            <button type="submit" id="saveButton">Save</button>
         </form>
     </div>
 </body>
