profile editing funcytion

--- a/popup.html
+++ b/popup.html
@@ -32,12 +32,11 @@
                 <label for="education">Education</label>
                 <input type="text" id="school" name="school" placeholder="School">
                 <input type="text" id="degree" name="degree" placeholder="Degree">
-                <input type="text" id="study" name="study" placeholder="Field of Study">    
             </div>
 
             <div class="form-group">
                 <label for="education">Work Experience</label>
-                <input type="text" id="industry" name="industry" placeholder="Industry">    
+                <input type="text" id="workPlace" name="workPlace" placeholder="workPlace">    
             </div>
             <div class="form-group">
                 <label for="contacts">Contacts</label>
