--- a/options.html
+++ b/options.html
@@ -4,26 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Options Menu</title>
+    <link rel="stylesheet" href="options.css">
 </head>
 <body>
     <div class="sidebar">
         <div class="profile">
+            <img src="pf.jpg" alt="Profile Picture" class="profile-picture">
             <span class="profile-name">Name Surname</span>
             <button class="dropdown-btn">▼</button>
         </div>
 
         <nav class="nav-menu">
             <a href="#" class="nav-item">
-                <img src="" alt="Home Icon" class="nav-icon"> Home
+                <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#5f6368" class="nav-icon">
+                    <path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/>
+                </svg>
+                Home
             </a>
             <a href="#" class="nav-item">
-                <img src="" alt="History Icon" class="nav-icon"> History
+                <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#5f6368" class="nav-icon">
+                    <path d="M480-120q-138 0-240.5-91.5T122-440h82q14 104 92.5 172T480-200q117 0 198.5-81.5T760-480q0-117-81.5-198.5T480-760q-69 0-129 32t-101 88h110v80H120v-240h80v94q51-64 124.5-99T480-840q75 0 140.5 28.5t114 77q48.5 48.5 77 114T840-480q0 75-28.5 140.5t-77 114q-48.5 48.5-114 77T480-120Zm112-192L440-464v-216h80v184l128 128-56 56Z"/>
+                </svg>
+                History
             </a>
             <a href="#" class="nav-item">
-                <img src="" alt="Export Icon" class="nav-icon"> Export
+                <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#5f6368" class="nav-icon">
+                    <path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h200v80H160v480h640v-480H600v-80h200q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-184L280-544l56-56 104 104v-304h80v304l104-104 56 56-200 200Z"/>
+                </svg>
+                Export
             </a>
             <a href="#" class="nav-item">
-                <img src="" alt="Import Icon" class="nav-icon"> Import
+                <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#5f6368" class="nav-icon">
+                    <path d="M440-160v-326L336-382l-56-58 200-200 200 200-56 58-104-104v326h-80ZM160-600v-120q0-33 23.5-56.5T240-800h480q33 0 56.5 23.5T800-720v120h-80v-120H240v120h-80Z"/>
+                </svg>
+                Import
             </a>
         </nav>
     </div>
