--- a/popup.html
+++ b/popup.html
@@ -5,22 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto Form Filler</title>
     <link rel="stylesheet" href="popup.css">
-</head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=delete,download,history,home,refresh,save,upload" /></head>
 <body>
     <div class="cnt">
-        <!-- <div class="mini-profile">
-            <img src="assets/default.jpg" alt="" class="mini-profile__img">
-            <h1 id="fname" class="mini-profile__user-name">Name Surname</h1>
-        </div> -->
-
-        <div class="form-group">
-            <label for="userDropdown">Select a User</label>
-            <select id="userDropdown">
-                <option value="">-- Select a Profile --</option>
-            </select>
-        </div>        
+        <div class="cnt button-cnt data-cnt">
+            <button class="icon-button" id="homeButton"><span class="material-symbols-outlined">home</span>
+                Home</button>
+            <button class="icon-button" id="historyButton"><span class="material-symbols-outlined">
+                history
+                </span>History</button>
+            <button class="icon-button" id="importButton"><span class="material-symbols-outlined">
+                download
+                </span>Import</button>
+            <button class="icon-button" id="exportButton"><span class="material-symbols-outlined">
+                upload
+                </span>Export</button>
+        </div>    
 
         <form method="post">
+            <div class="form-group">
+                <label for="userDropdown">Select a User</label>
+                <select id="userDropdown">
+                    <option value="">-- New Profile --</option>
+                </select>
+            </div>        
+
             <div class="form-group">
                 <label for="information">Personal Information</label>
                 <input type="text" id="fname" name="fname" placeholder="Name" required>
@@ -36,14 +45,25 @@
 
             <div class="form-group">
                 <label for="education">Work Experience</label>
-                <input type="text" id="workPlace" name="workPlace" placeholder="workPlace">    
+                <input type="text" id="workPlace" name="workPlace" placeholder="Workplace">    
             </div>
             <div class="form-group">
                 <label for="contacts">Contacts</label>
                 <input type="text" id="number" name="number" placeholder="Phone Number">
                 <input type="email" id="email" name="email" placeholder="E-mail">    
+            </div>    
+
+            <div class="cnt button-cnt">
+                <button id="saveButton"><span class="material-symbols-outlined">
+                    save
+                    </span>Save</button>
+                <button type="reset" id="resetButton"><span class="material-symbols-outlined">
+                    refresh
+                    </span>Reset</button>
+                <button id="deleteButton"><span class="material-symbols-outlined">
+                    delete
+                    </span>Delete</button>
             </div>
-            <button type="submit" id="saveButton">Save</button>
         </form>
     </div>
 </body>
