--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
             <button class="icon-button" id="exportButton"><span class="material-symbols-outlined">
                 upload
                 </span>Export</button>
-        </div>    
+        </div>
 
         <form method="post">
             <div class="form-group">
@@ -51,7 +51,7 @@
                 <label for="contacts">Contacts</label>
                 <input type="text" id="number" name="number" placeholder="Phone Number">
                 <input type="email" id="email" name="email" placeholder="E-mail">    
-            </div>    
+            </div>  
 
             <div class="cnt button-cnt">
                 <button id="saveButton"><span class="material-symbols-outlined">
@@ -64,6 +64,10 @@
                     delete
                     </span>Delete</button>
             </div>
+        </form>
+
+        <form method="post" class="export-popup">
+            <input type="file" name="export-file" id="export-file">
         </form>
     </div>
 </body>
