--- a/popup.html
+++ b/popup.html
@@ -66,9 +66,12 @@
             </div>
         </form>
 
-        <form method="post" class="export-popup">
-            <input type="file" name="export-file" id="export-file">
-        </form>
+        <div class="import-cnt">
+            <div class="import-blur"></div>
+            <form method="post" class="import-popup">
+                <input type="file" name="import-file" id="import-file">
+            </form>    
+        </div>
     </div>
 </body>
 <script src="popup.js"></script>
