--- a/popup.html
+++ b/popup.html
@@ -68,9 +68,12 @@
 
         <div class="import-cnt">
             <div class="import-blur"></div>
-            <form method="post" class="import-popup">
-                <input type="file" name="import-file" id="import-file">
-            </form>    
+            <div class="import-wrapper">
+                <form method="post" class="import-popup">
+                    <label for="import-file">Import data</label>
+                    <input type="file" name="import-file" id="import-file">
+                </form>    
+            </div>
         </div>
     </div>
 </body>
