--- a/popup.html
+++ b/popup.html
@@ -37,9 +37,9 @@
             <div class="form-group">
                 <h4 class="form-heading">Personal Information</h4>
                 <label for="fname">Name*</label>
-                <input type="text" id="fname" name="fname" placeholder="Name" required>
+                <input type="text" id="fname" name="fname" placeholder="Name">
                 <label for="fname">Surname*</label>
-                <input type="text" id="lname" name="lname" placeholder="Surname" required>
+                <input type="text" id="lname" name="lname" placeholder="Surname">
                 <label for="fname">Location</label>
                 <input type="text" id="location" name="location" placeholder="Location">    
             </div>
