--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto Form Filler</title>
     <link rel="stylesheet" href="popup.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=content_paste,delete,delete_forever,download,history,home,refresh,save,upload" /></head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add,content_paste,delete,delete_forever,download,history,home,refresh,save,upload" /></head>
 <body>
     <div class="cnt">
         <div class="cnt button-cnt data-cnt">
@@ -65,11 +65,15 @@
                 <input type="email" id="email" name="email" placeholder="E-mail">    
             </div>  
 
+            <div id="inputContainer"></div>
             <div class="cnt button-cnt">
                 <button id="saveButton"><span class="material-symbols-outlined">
                     save
                     </span>Save</button>
-                <button type="reset" id="resetButton"><span class="material-symbols-outlined">
+                <button class="outline" type="button" id="addButton"><span class="material-symbols-outlined">
+                    add
+                    </span>Add</button>
+                <button class="outline" type="reset" id="resetButton"><span class="material-symbols-outlined">
                     refresh
                     </span>Reset</button>
                 <button class="deleteButton" id="deleteButton"><span class="material-symbols-outlined">
