--- a/popup.html
+++ b/popup.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto Form Filler</title>
     <link rel="stylesheet" href="popup.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=delete,download,history,home,refresh,save,upload" /></head>
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=delete,download,history,home,refresh,save,upload" />
+
+</head>
+
 <body>
     <div class="cnt">
         <div class="cnt button-cnt data-cnt">
             <button class="icon-button" id="homeButton"><span class="material-symbols-outlined">home</span>
                 Home</button>
             <button class="icon-button" id="historyButton"><span class="material-symbols-outlined">
-                history
+                    history
                 </span>History</button>
             <button class="icon-button" id="importButton"><span class="material-symbols-outlined">
-                download
+                    download
                 </span>Import</button>
             <button class="icon-button" id="exportButton"><span class="material-symbols-outlined">
-                upload
+                    upload
                 </span>Export</button>
+            <button class="icon-button" id="fillButton"><span class="material-symbols-outlined">
+                    upload
+                </span>Fill</button>
         </div>
 
         <form method="post">
@@ -28,15 +37,15 @@
                 <select id="userDropdown">
                     <option value="">-- New Profile --</option>
                 </select>
-            </div>        
+            </div>
 
             <div class="form-group">
                 <label for="information">Personal Information</label>
                 <input type="text" id="fname" name="fname" placeholder="Name" required>
                 <input type="text" id="lname" name="lname" placeholder="Surname" required>
-                <input type="text" id="location" name="location" placeholder="Location">    
+                <input type="text" id="location" name="location" placeholder="Location">
             </div>
-            
+
             <div class="form-group">
                 <label for="education">Education</label>
                 <input type="text" id="school" name="school" placeholder="School">
@@ -45,23 +54,23 @@
 
             <div class="form-group">
                 <label for="education">Work Experience</label>
-                <input type="text" id="workPlace" name="workPlace" placeholder="Workplace">    
+                <input type="text" id="workPlace" name="workPlace" placeholder="Workplace">
             </div>
             <div class="form-group">
                 <label for="contacts">Contacts</label>
                 <input type="text" id="number" name="number" placeholder="Phone Number">
-                <input type="email" id="email" name="email" placeholder="E-mail">    
-            </div>  
+                <input type="email" id="email" name="email" placeholder="E-mail">
+            </div>
 
             <div class="cnt button-cnt">
                 <button id="saveButton"><span class="material-symbols-outlined">
-                    save
+                        save
                     </span>Save</button>
                 <button type="reset" id="resetButton"><span class="material-symbols-outlined">
-                    refresh
+                        refresh
                     </span>Reset</button>
                 <button id="deleteButton"><span class="material-symbols-outlined">
-                    delete
+                        delete
                     </span>Delete</button>
             </div>
         </form>
@@ -72,4 +81,5 @@
     </div>
 </body>
 <script src="popup.js"></script>
+
 </html>
