--- a/popup.html
+++ b/popup.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto Form Filler</title>
     <link rel="stylesheet" href="popup.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=content_paste,delete,delete_forever,download,history,home,refresh,save,upload" /></head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=content_paste,delete,delete_forever,download,history,home,open_in_new,refresh,save,upload" /></head>
 <body>
-    <div class="cnt">
-        <div class="cnt button-cnt data-cnt">
-            <button class="icon-button" id="homeButton"><span class="material-symbols-outlined">home</span>
-                Home</button>
-            <button class="icon-button" id="historyButton"><span class="material-symbols-outlined">
-                history
-                </span>History</button>
-            <button class="icon-button" id="importButton"><span class="material-symbols-outlined">
-                download
-                </span>Import</button>
-            <button class="icon-button" id="exportButton"><span class="material-symbols-outlined">
-                upload
-                </span>Export</button>
-        </div>
+    <div class="cnt button-cnt data-cnt">
+        <button class="icon-button active" id="homeButton"><span class="material-symbols-outlined active">home</span>
+            Home</button>
+        <button class="icon-button" id="historyButton"><span class="material-symbols-outlined">
+            history
+            </span>History</button>
+        <button class="icon-button" id="importButton"><span class="material-symbols-outlined">
+            download
+            </span>Import</button>
+        <button class="icon-button" id="exportButton"><span class="material-symbols-outlined">
+            upload
+            </span>Export</button>
+    </div>
 
+    <div class="cnt">
         <button id="autoFill" class="autoFill outline"><span class="material-symbols-outlined">
             content_paste
             </span>Auto Fill</button>
@@ -91,6 +91,25 @@
                 </form>    
             </div>
         </div>
+    </div>
+
+    <div class="cnt history-cnt">
+        <table>
+            <thead>
+                <th scope="col">Full name</th>
+                <th scope="col">Job</th>
+                <th scope="col">Date applied</th>
+                <th scope="col">Link</th>
+            </thead>
+            <tbody>
+                <td>Full name</td>
+                <td>Job title</td>
+                <td>12/12/2024</td>
+                <td><a href="" class="table-link"><span class="material-symbols-outlined">
+                    open_in_new
+                    </span></a></td>
+            </tbody>
+        </table>
     </div>
 </body>
 <script src="popup.js"></script>
