--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
             </span>Export</button>
     </div>
 
-    <div class="cnt">
+    <div class="cnt home-cnt">
         <button id="autoFill" class="autoFill outline"><span class="material-symbols-outlined">
             content_paste
             </span>Auto Fill</button>
