Add fill button

--- a/popup.html
+++ b/popup.html
@@ -26,10 +26,12 @@
             <button class="icon-button" id="exportButton"><span class="material-symbols-outlined">
                     upload
                 </span>Export</button>
-            <button class="icon-button" id="fillButton"><span class="material-symbols-outlined">
-                    upload
-                </span>Fill</button>
+        
         </div>
+
+        <button id="fillButton" class="autoFill outline"><span class="material-symbols-outlined">
+                content_paste
+            </span>Auto Fill</button>
 
         <form method="post">
             <div class="form-group">
