--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="popup.css">
 
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=delete,download,history,home,refresh,save,upload" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=delete,download,history,home,refresh,save,upload,content_paste" />
 
 </head>
 
