--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
             Home</button>
         <button class="icon-button" id="historyButton"><span class="material-symbols-outlined">
             history
-            </span>History</button>
+            </span>Dashboard</button>
         <button class="icon-button" id="importButton"><span class="material-symbols-outlined">
             download
             </span>Import</button>
@@ -21,7 +21,7 @@
             </span>Export</button>
     </div>
 
-    <div class="cnt home-cnt">
+    <div class="cnt home-cnt active">
         <button id="autoFill" class="autoFill outline"><span class="material-symbols-outlined">
             content_paste
             </span>Auto Fill</button>
@@ -94,21 +94,21 @@
     </div>
 
     <div class="cnt history-cnt">
-        <table>
+        <div class="cnt button-cnt">
+            <button id="saveHistoryButton"><span class="material-symbols-outlined">
+                save
+                </span>Save</button>
+            <button class="deleteButton" id="deleteHistoryButton"><span class="material-symbols-outlined">
+                delete
+                </span>Delete history</button>
+        </div>
+        <table id="historyTable">
             <thead>
                 <th scope="col">Full name</th>
                 <th scope="col">Job</th>
                 <th scope="col">Date applied</th>
-                <th scope="col">Link</th>
+                <th scope="col">Status</th>
             </thead>
-            <tbody>
-                <td>Full name</td>
-                <td>Job title</td>
-                <td>12/12/2024</td>
-                <td><a href="" class="table-link"><span class="material-symbols-outlined">
-                    open_in_new
-                    </span></a></td>
-            </tbody>
         </table>
     </div>
 </body>
