--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
                 Home</button>    
             <button class="icon-button" id="historyButton"><span class="material-symbols-outlined">
                 history
-                </span>History</button>
+                </span>Dashboard</button>
             <button class="icon-button" id="importButton"><span class="material-symbols-outlined">
                 download
                 </span>Import</button>
@@ -83,7 +83,13 @@
                         delete_forever
                         </span>Wipe all data</button>
                 </div>
-            </form>    
+            </form>   
+            
+            <div class="cnt button-cnt">
+                <button class="outline" id="saveForLater">Save for Later</button>
+                <button class="outline" id="restoreForm">Restore Form</button>
+                <br><br><br><br><br>
+            </div>    
         </div>
 
         <div class="cnt history-cnt">
