--- a/popup.html
+++ b/popup.html
@@ -86,6 +86,7 @@
             </form>   
             
             <div class="cnt button-cnt">
+                <button class="outline" id="generateLetterButton">Generate a cover letter</button>
                 <button class="outline" id="saveForLater">Save for Later</button>
                 <button class="outline" id="restoreForm">Restore Form</button>
                 <br><br><br><br><br>
